--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ h1 {
 
 .card {
   background-color: white;
+  max-width: 512px;
   padding: 20px;
   border-radius: 20px;
   box-shadow: 5px 5px 15px #0009;
@@ -25,6 +26,7 @@ h1 {
 
 .card__quote {
   margin-bottom: 0.5rem;
+  line-height: 1.5rem;
 }
 
 .card__author {
@@ -66,4 +68,8 @@ h1 {
   pointer-events: none;
   opacity: 0;
   transition: opacity 2s;
+}
+
+.openQM {
+  font-size: 70px;
 }
